gcc/testsuite/g++.dg/other/typedef2.C
typedef void fn() const;

fn* fp;			 // { dg-error "pointer.*qualified function type" }
